# schedule_automation

./: .gitignore  LICENSE  db.sqlite3  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.cursor/rules/: timestabling-rules.mdc
apps/academics/: admin.py  models.py  serializers.py  urls.py  views.py
apps/academics/migrations/: 0001_initial.py  0002_course_course_year_course_is_mook_course_lesson_type.py  0003_course_elective_group_course_is_elective_and_more.py
apps/data_import/: apps.py  urls.py  views.py
apps/facilities/: admin.py  models.py  serializers.py  urls.py  views.py
apps/facilities/migrations/: 0001_initial.py  0002_room_block.py
apps/faculty/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/faculty/migrations/: 0001_initial.py
apps/schedule/: admin.py  models.py  optapy_constraints.py  optapy_entities.py  serializers.py  tasks.py  urls.py  views.py
apps/schedule/migrations/: 0001_initial.py  0002_taskhistory.py
config/: celery.py  settings.py  urls.py
templates/: base.html  dashboard.html  schedule_import_export.html
templates/data_management/: form_view.html  list_view.html
templates/registration/: login.html  logout.html
templates/schedule/: schedule_edit.html  schedule_grid.html  schedule_view.html  task_history_widget.html
utils/: optapy_transform.py
